--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Web Front-end Developer - User Experience Designer</span>
+                        <span class="skills">产品经理 - 用户体验设计师</span>
                     </div>
                 </div>
             </div>
