--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,15 +18,15 @@
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>客户:
-                                    <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
+                                    <strong><a href="">{{ post.client }}</a>
                                     </strong>
                                 </li>
                                 <li>日期:
-                                    <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
+                                    <strong><a href="">{{ post.project-date }}</a>
                                     </strong>
                                 </li>
                                 <li>服务:
-                                    <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
+                                    <strong><a href="">{{ post.category }}</a>
                                     </strong>
                                 </li>
                             </ul>
