--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         <! -- SINGLE POST -->
         <div class="col-lg-8">
             <! -- Blog Post  -->
-            <p><img class="img-responsive" src="{{ "/assets/img/members/" | prepend: site.baseurl }}{{ post.img }}"></p>
+            <p><img class="img-responsive" src="{{ "/assets/img/project/" | prepend: site.baseurl }}{{ post.img }}"></p>
             <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ page.title }}</h3></a>
             <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | 作者: {{ page.author }}</csmall></p>
               
