--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,9 @@
     <meta name="baidu-site-verification" content="Lg1xrqpkA8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+      <meta name="keywords" content="Framerjs, Framer Studio, 产品经理, 交互设计, Xcode 原型设计, 极克UX, 用户体验设计, 动效设计, Quartz Composer">
+    <meta name="description" content="极克 UX，与">
+    <meta name="author" content="大蔚陈">
     <link rel="shortcut icon" href="{{ "assets/ico/favicon.ico" | prepend: site.baseurl }}">
 
     <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
