--- a/_includes/paginate.html
+++ b/_includes/paginate.html
@@ -18,7 +18,7 @@
       {% if paginator.page == 1 %}
         <span class="current-page">1</span>
       {% else %}
-        <a href="/">1</a>
+        <a href="{{ pager_url }}/">1</a>
       {% endif %}
     </li>
 
