--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -466,3 +466,10 @@ csmall {
 	padding-right: 15px;
 	font-size: 18px;
 }
+
+a.anchor{
+    display: block; 
+    position: relative; 
+    top: -80px; 
+    visibility: hidden;
+}
