--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,4 +31,14 @@
     <![endif]-->
 
     <script src="{{ "/assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?fd98b41132bdeb4ba6f0694ec284a294";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
