--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,9 +1,20 @@
----
-layout: default
----
-{% include header.html %}
+<!DOCTYPE html>
+<html>
+  {% include head.html %}
+<body>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    {% include header.html %}
+    <main class="mdl-layout__content main-container">
+      {% include info.html %}
 
-  {{ content }}
-
-{% include testimonial.html %}
-{% include clients.html %}
+      <div class="mdl-layout-content">
+        <div id="screens" class="blog-content mdl-color--white content mdl-color-text--grey-800 mdl-cell">
+          {{ content }}
+        </div>
+      </div>
+      {% include footer.html %}
+    </main>
+  </div>
+  {% include js.html %}
+</body>
+</html>
