--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
     </header>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="{{ site.baseurl }}{{ site.url }}"><i class="material-icons">home</i>首页</a>
-      <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/categories{{ categories.url | replace_first: '/', '' | prepend: site.baseurl | prepend: site.url }}"><i class="material-icons">foldert</i>分类</a>
+      <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/categories/"><i class="material-icons">foldert</i>分类</a>
       <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href=""><i class="material-icons">face</i>关于</a>
     </nav>
   </div>
