--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       <nav class="mdl-navigation mdl-layout--large-screen-only">
         <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="/">首页</a>
         <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="{{"/categories/" | prepend: site.baseurl }}">分类</a>
-        <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="">关于</a>
+        <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="/about/">关于</a>
       </nav>
     </div>
   </header><!--end header -->
