fixed about nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       <nav class="mdl-navigation mdl-layout--large-screen-only">
         <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="/">首页</a>
         <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="{{"/categories/" | prepend: site.baseurl }}">分类</a>
-        <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="/about/">关于</a>
+        <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="{{"/about/" | prepend: site.baseurl }}">关于</a>
       </nav>
     </div>
   </header><!--end header -->
@@ -25,7 +25,7 @@
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/"><i class="material-icons">home</i>首页</a>
       <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/categories/"><i class="material-icons">foldert</i>分类</a>
-      <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/about/"><i class="material-icons">face</i>关于</a>
+      <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="{{"/about/" | prepend: site.baseurl }}"><i class="material-icons">face</i>关于</a>
     </nav>
   </div>
 
