--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/"><i class="material-icons">home</i>首页</a>
       <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="/categories/"><i class="material-icons">foldert</i>分类</a>
-      <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="{{"/about/" | prepend: site.baseurl }}"><i class="material-icons">face</i>关于</a>
+      <a class="mdl-navigation__link mdl-button mdl-js-button mdl-js-ripple-effect" href="{{"/about" | prepend: site.baseurl }}"><i class="material-icons">face</i>关于</a>
     </nav>
   </div>
 
