--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,7 +130,7 @@ font-size: 14px;
 #blog-info {
 	color: #ffffff;
 /*	min-height: 800px;*/
-	background: url(/assets/img/test-bg.jpg) no-repeat center center / cover;
+	background: url(/assets/img/apple-desk.jpg) no-repeat center center / cover;
 	min-height: 550px;
 }
 
