--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,7 +118,7 @@ font-size: 14px;
 	padding-top: 10px;
 }
 .slogan:before {
-  background: none repeat scroll 0 0 #4c4c50;
+  background: none repeat scroll 0 0 #A7A7A7;
   content: "";
   height: 1px;
   left: 0;
