--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,10 +285,10 @@ display: block;
 }
 
 .post .david-avatar {
-  width: 44px;
-  height: 44px;
+  width: 88px;
+  height: 88px;
   background-image: url(/assets/img/avatar.png);
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
   background-size: 50%;
   border-radius: 50%;
