fix article img size

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,5 @@
     <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
     <link rel="stylesheet" href="/assets/css/material.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
-    
-
+    <link rel="stylesheet" type="text/css" href="/assets/css/github-markdown.css">
 </head>
