add baidu tongji

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,20 @@
       <meta name="keywords" content="Framerjs, Framer Studio, Framerjs 教程, 产品经理, 交互设计, Xcode 原型设计, 极克UX, 用户体验设计, 动效设计, Quartz Composer, 移动互联网, App设计">
     <meta name="description" content="大蔚陈，与你一起交流产品与设计">
     <meta name="author" content="大蔚陈">
-    <link rel="shortcut icon" href="{{ "assets/ico/favicon.ico" | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ "/assets/img/favicon.ico" | prepend: site.baseurl }}">
 
     <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
     <link rel="stylesheet" href="/assets/css/material.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/github-markdown.css">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?cce1e4fb7c06eb825a0631a4a2f12da6";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
