--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
       <meta name="keywords" content="Framerjs, Framer Studio, Framerjs 教程, 产品经理, 交互设计, Xcode 原型设计, 极克UX, 用户体验设计, 动效设计, Quartz Composer, 移动互联网, App设计">
     <meta name="description" content="大蔚陈，与你一起交流产品与设计">
     <meta name="author" content="大蔚陈">
+    <meta name="baidu-site-verification" content="Lg1xrqpkA8" />
     <link rel="shortcut icon" href="{{ "/assets/img/favicon.ico" | prepend: site.baseurl }}">
 
     <title>{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}</title>
