--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -254,9 +254,9 @@ display: block;
 
 .blog-content {
 	border-radius: 2px;
-	margin: 50px auto;
-	padding: 40px 10px 20px;
-	width: calc(100% - 40px)
+	margin: 20px auto;
+	padding: 10px 0px 20px;
+	width: 100%;
 }
 
 .pagination .indicator {
@@ -285,13 +285,14 @@ display: block;
 }
 
 .post .david-avatar {
-  width: 88px;
-  height: 88px;
+  width: 44px;
+  height: 44px;
   background-image: url(/assets/img/avatar.png);
-  background-position: left;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 100%;
   border-radius: 50%;
+  margin-right: 16px;
 /*  background-color: #F5F5F5*/
 }
 
@@ -577,8 +578,7 @@ display: block;
 }
 
 .page h3 {
-  margin-left: 16px;
-  padding-left: 8px;
+  padding-left: 16px;
   width: 80%;
 }
 
@@ -592,7 +592,7 @@ display: block;
 .author-info {
   position: relative;
   margin: 50px auto;
-  padding: 50px;
+  padding: 50px 50px 50px 20px;
   height: 200px;
   width: 80%;
   word-break: break-word;
